fixed overlapping navigation

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* ========== GLOBAL STYLES ========== */
 body {
     font-family: "Poppins", sans-serif;
     font-weight: 600;
@@ -50,7 +49,7 @@ nav {
 }
 
 .mytxtlogo {
-    color: rgb(218, 218, 218);
+    color: orange;
     font-size: 1.1rem;
     font-weight: 600;
     text-decoration: none;
@@ -453,3 +452,4 @@ nav {
     }
 
 }
+
